# internal/domain/model/track.go
@@ -3,6 +3,6 @@ package model
 type Track struct {
 	Artist      string   `json:"artist" example:"Lucid Dreams"`
 	Title       string   `json:"title" example:"Juice WRLD"`
-	Lyrics      []string `json:"lyrics" example:"I still see your shadows in my room..."`
+	Lyrics      []string `json:"track" example:"I still see your shadows in my room..."`
 	Translation []string `json:"translation" example:"Я все еще вижу твои тени в моей комнате..."`
 }
